--- a/style.css
+++ b/style.css
@@ -361,6 +361,7 @@ animation-fill-mode: forwards;
   width: 80%;
   margin: auto;
   display: block;
+  height: 15%;
 }
 
 .box button,
@@ -819,7 +820,7 @@ text {
 
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     width: 80vw;
     margin: 20px auto;
   }
@@ -829,21 +830,20 @@ text {
     display: flex;
     flex-direction: column;
     background-color: white;
-    width: 100%;
-    height: 60vh;
+    height: 50vh;
   }
 
   .box > *,
   .boxPortfolio > * {
-    width: 80%;
-    margin: auto;
+    width: 90%;
+    margin: 0px auto;
     display: block;
   }
 
   .box button,
   .boxPortfolio button {
     background-color: #022b3a;
-    margin: 20px 0 0px auto;
+    margin: 20px 0 20px auto;
     border-radius: 30px;
     border: none;
     color: white;
@@ -857,8 +857,8 @@ text {
 
   .portfolio-wrapper img {
     display: block;
-    max-width: 80%;
-    height: 50%;
+    max-width: 90%;
+    height: 60%;
     object-fit: cover;
 
     overflow: hidden;
