--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ header {
 
 .header-wrapper {
   font-family: "BrandonGrotesque-Regular";
-  width: 90vw;
+  width: 100vw;
   margin: 0px auto;
   display: grid;
   grid-template-columns: auto auto;
@@ -62,6 +62,8 @@ header {
 }
 
 .header-area-1 {
+  margin-left: 5vw;
+
   grid-area: area1;
   display: flex;
   align-items: center;
@@ -73,10 +75,12 @@ header {
   justify-content: flex-end;
   align-items: center;
   height: 100%;
+  width: 100vw;
 }
 
 #nav-icon3 {
   grid-area: area2;
+  margin-right: 5vw;
 }
 
 .header-area-2 a {
@@ -133,7 +137,7 @@ header {
   height: 20px;
   position: relative;
   margin: auto;
-  margin-right: 0px;
+  margin-right: 5vw;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -414,23 +418,15 @@ main {
 
 .wrapper-contact {
   display: grid;
-  grid-template-rows: 40% 1fr;
+  grid-template-rows: 1fr 1fr;
   grid-template-areas: "area1" "area2";
   width: 80vw;
-  height: 100vh;
   margin: auto;
   scroll-snap-type: y mandatory;
 }
 
-.wrapper-contact img {
-  display: block;
-  width: 80%;
-  padding-top: 10%;
-  margin: 20% auto;
-}
-
 .wrapper-contact-area1 {
-  grid-area: area2;
+  grid-area: area1;
   margin: 10% auto;
   width: 100%;
   display: flex;
@@ -438,30 +434,29 @@ main {
 }
 
 .wrapper-contact-area1 h1 {
-  text-align: center;
   font-family: "BrandonGrotesque-Regular";
   letter-spacing: 3px;
 }
 
 .someLinks img {
   display: inline-block;
-  width: 50px;
-  margin: 2vw 2vw 2vw 0;
+  width: 40px;
+  margin: 2vw 7vw 2vw 0;
 }
 
 .contactDetails img {
   /* display: inline-block; */
   width: auto;
-  height: 30px;
-  margin: 2vw 2vw 2vw 0;
+  height: 25px;
+  margin: 2vw 2vw 0 0;
   display: flex;
-  align-self: center;
   padding-top: 0;
 }
 .contactDetails h3 {
   display: flex;
-  align-self: center;
+  /* align-self: center; */
   text-decoration: none;
+  font-weight: 400;
 }
 .contactDetails a {
   text-decoration: none;
@@ -475,16 +470,16 @@ main {
 .contactDetails {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-content: center;
+  /* align-items: center; */
+  /* align-content: center; */
 }
 .someLinks {
   display: flex;
   flex-direction: row;
-  align-self: center;
+  /* justy-content: space-between; */
 }
 .wrapper-contact-area2 {
-  grid-area: area1;
+  grid-area: area2;
   width: 100%;
 }
 
