--- a/style.css
+++ b/style.css
@@ -72,10 +72,7 @@ header {
 .header-area-2 {
   grid-area: area3;
   display: none;
-  justify-content: flex-end;
-  align-items: center;
   height: 100%;
-  width: 100vw;
 }
 
 #nav-icon3 {
@@ -85,7 +82,7 @@ header {
 
 .header-area-2 a {
   background: #022b3a;
-  /* width: 100%; */
+  padding-left: 5vw;
   align-self: center;
   display: flex;
   padding: 0 10px;
@@ -132,12 +129,14 @@ header {
 }
 
 #nav-icon3 {
-  display: block;
+  display: flex;
+  align-self: center;
+  /* margin: auto; */
   width: 20px;
   height: 20px;
   position: relative;
-  margin: auto;
   margin-right: 5vw;
+  margin-left: auto;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -776,6 +775,11 @@ textarea::placeholder {
   .header-area-2 {
     grid-area: area2;
     display: flex;
+    justify-content: flex-end;
+    margin: 0px;
+  }
+  .header-area-1 {
+    margin: 0px;
   }
 
   .header-wrapper {
