--- a/style.css
+++ b/style.css
@@ -503,7 +503,7 @@ input::placeholder,
 textarea::placeholder {
   color: white;
   font-size: 1.2em;
-  padding: 5px;
+  /* padding: 5px; */
 }
 /*------------------------ about ---------------------------- */
 .aboutSection {
