--- a/style.css
+++ b/style.css
@@ -486,8 +486,8 @@ input {
   display: block;
   width: 100%;
   margin: 30px auto;
-  height: 1.5em;
-  padding: 10px 0;
+  height: 3.5em;
+  /* padding: 10px 0; */
   background: #022b3a;
   border: none;
   color: white;
