--- a/style.css
+++ b/style.css
@@ -502,7 +502,7 @@ textarea {
 input::placeholder,
 textarea::placeholder {
   color: white;
-  font-size: 1.2em;
+  /* font-size: 1.2em; */
   padding: 5px;
 }
 /*------------------------ about ---------------------------- */
