--- a/style.css
+++ b/style.css
@@ -486,7 +486,7 @@ input {
   display: block;
   width: 100%;
   margin: 30px auto;
-  height: 3.5em;
+  height: 65px;
   /* padding: 10px 0; */
   background: #022b3a;
   border: none;
